--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
 </head>
 <body>
     <h1>Mireya Valdez</h1>
+    <img src="img/me.jpg" alt="Mireya Valdez">
     <ul>
         <li>Music</li>
         <li>Shoes</li>
         <li>Reading</li>
     </ul>
+
 </body>
 </html>
